--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "reactTutorial =============",
   "main": "gulpfile.js",
   "scripts": {
-    "start": "node_modules/.bin/gulp",
+    "start-server": "nodemon server/server.js",
+    "start": "npm run start-server;",
+    "postgresql-run": "export NODE_ENV='postgresql-run'; node database/user_database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "jest": {
@@ -16,13 +18,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "browserify": "^10.2.4",
+    "cookie-parser": "^1.4.0",
+    "ejs": "^2.3.4",
+    "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
     "lodash": "^3.10.1",
+    "logger": "0.0.1",
+    "mongod": "^1.3.0",
+    "nodemon": "^1.8.0",
+    "passport": "^0.3.0",
+    "passport-strava": "^0.1.0",
+    "passport-strava-oauth2": "^0.1.3",
+    "path": "^0.12.7",
+    "pg": "^4.4.3",
+    "pg-hstore": "^2.3.2",
     "react": "^0.14",
     "react-dom": "^0.14.0",
     "reactify": "^1.1.1",
+    "util": "^0.10.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.2"
   }
