--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "logger": "0.0.1",
     "mongod": "^1.3.0",
     "nodemon": "^1.8.0",
-    "passport": "^0.3.0",
+    "passport": "^0.2.2",
     "passport-strava": "^0.1.0",
     "passport-strava-oauth2": "^0.1.3",
     "path": "^0.12.7",
@@ -39,6 +39,8 @@
     "react": "^0.14",
     "react-dom": "^0.14.0",
     "reactify": "^1.1.1",
+    "request": "^2.65.0",
+    "sequelize": "^3.13.0",
     "util": "^0.10.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.2.2"
