--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.12.1",
     "gulp": "^3.9.0",
     "gulp-notify": "^2.2.0",
+    "history": "^1.13.0",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
     "mongod": "^1.3.0",
@@ -38,6 +39,7 @@
     "pg-hstore": "^2.3.2",
     "react": "^0.14",
     "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc4",
     "reactify": "^1.1.1",
     "request": "^2.65.0",
     "sequelize": "^3.13.0",
