--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "gulpfile.js",
   "scripts": {
     "start-server": "nodemon server/server.js",
-    "start": "npm run start-server;",
+    "start": "npm run gulp & npm run start-server",
+    "gulp": "gulp",
     "postgresql-run": "export NODE_ENV='postgresql-run'; node database/user_database.js; node  database/activities_database.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,9 +19,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babelify": "^7.2.0",
     "body-parser": "^1.14.1",
+    "bootstrap": "^3.3.5",
     "browserify": "^10.2.4",
     "cookie-parser": "^1.4.0",
+    "cookies": "^0.5.1",
     "ejs": "^2.3.4",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
@@ -29,6 +35,7 @@
     "history": "^1.13.0",
     "lodash": "^3.10.1",
     "logger": "0.0.1",
+    "moment": "^2.10.6",
     "mongod": "^1.3.0",
     "nodemon": "^1.8.0",
     "passport": "^0.2.2",
@@ -37,8 +44,12 @@
     "path": "^0.12.7",
     "pg": "^4.4.3",
     "pg-hstore": "^2.3.2",
+    "polyline": "^0.2.0",
+    "polyline-encoded": "0.0.7",
     "react": "^0.14",
     "react-dom": "^0.14.0",
+    "react-gmaps": "^1.0.4",
+    "react-google-maps": "^4.2.0",
     "react-router": "^1.0.0-rc4",
     "reactify": "^1.1.1",
     "request": "^2.65.0",
