--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "reactTutorial =============",
   "main": "gulpfile.js",
   "scripts": {
-    "start-server": "nodemon server/server.js",
+    "start-server": "nodemon ./app.js",
     "start": "npm run gulp & npm run start-server",
     "gulp": "gulp",
     "postgresql-run": "export NODE_ENV='postgresql-run'; node database/user_database.js; node  database/activities_database.js",
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel": "^5.6.23",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babelify": "^7.2.0",
@@ -27,10 +28,12 @@
     "browserify": "^10.2.4",
     "cookie-parser": "^1.4.0",
     "cookies": "^0.5.1",
+    "cors": "^2.7.1",
     "ejs": "^2.3.4",
-    "express": "^4.13.3",
+    "express": "^4.12.3",
     "express-session": "^1.12.1",
     "gulp": "^3.9.0",
+    "gulp-nodemon": "^2.0.3",
     "gulp-notify": "^2.2.0",
     "history": "^1.13.0",
     "lodash": "^3.10.1",
@@ -54,8 +57,14 @@
     "reactify": "^1.1.1",
     "request": "^2.65.0",
     "sequelize": "^3.13.0",
+    "spotify-web-api-node": "^2.1.0",
+    "superagent": "^1.4.0",
     "util": "^0.10.3",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.2"
+    "watchify": "^3.2.2",
+    "pkginfo": "0.3.x",
+    "passport-oauth": "1.0.0",
+    "querystring": "~0.2.0",
+    "util": "~0.10.3"
   }
 }
